fix vertical alignment on menu tabs, Refs #709

--- a/ui/static/main.css
+++ b/ui/static/main.css
@@ -111,7 +111,6 @@ h5 {
     float: left;
     font-size: 150%;
     height: 28px;
-    padding-top: 3px;
     text-align: center;
     width: 170px;
 }
